tests/diffs/out31_ijava.txt
lli: test31.ll:112:1: error: multiple definition of local value named '.b'
%.b = getelementptr inbounds %.IntArray* %b, i32 0, i32 0
^
